adding the ionic view settings

--- a/ionic.config.json
+++ b/ionic.config.json
@@ -1,5 +1,6 @@
 {
   "name": "tedxCU",
-  "app_id": "",
-  "type": "ionic-angular"
+  "app_id": "699fd659",
+  "type": "ionic-angular",
+  "integrations": {}
 }
